# pado

./: .buildinfo  .gitattributes  .gitignore  LICENSE  README.md  citation.html  genindex.html  index.html  installation.html  license.html  objects.inv  optical_element.py  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.github/workflows/: deploy-docs.yml  docs.yml
_modules/: index.html
_modules/pado/: light.html  material.html  math.html  optical_element.html  propagator.html
_sources/: installation.rst.txt
_sources/api/: index.rst.txt  light.rst.txt  math.rst.txt  modules.rst.txt  pado.rst.txt
api/: index.html  light.html  material.html  math.html  modules.html  optical_element.html  pado.html  propagator.html
api/_autosummary/: pado.light.Light.html  pado.light.PolarizedLight.html  pado.material.Material.html  pado.math.calculate_psnr.html  pado.math.calculate_ssim.html  pado.math.compute_scasm_transfer_function.html  pado.math.fft.html  pado.math.gaussian_window.html  pado.math.ifft.html  pado.math.sc_dft_1d.html  pado.math.sc_dft_2d.html  pado.math.sc_idft_1d.html  pado.math.sc_idft_2d.html  pado.math.wrap_phase.html  (+13 more)
docs/: Makefile  build_docs.bat  deploy_to_github_pages.bat  deploy_to_github_pages.sh
docs/source/: conf.py  (+4 more)
example/: tutorial.ipynb
examples/: index.html
math/: complex.py  conv.py  fourier.py
pado/: __init__.py  cgh.py  cmap_phase.txt  complex.py  conv.py  fourier.py  light.py  material.py  math.py  optical_element.py  propagator.py
pado.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
render/: __init__.py  light.py  material.py  optical_element.py  propagator.py
requirements/: requirements-docs.txt
(+27 files in other folders)
